--- a/client/src/public/index.html
+++ b/client/src/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=devide-width, initial-scale=1.0">
+    <meta name="viewport" content="width=devide-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" conent="ie=edge">
     <title>Snakeymouse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
